Add eh_environment resource

--- a/templates/resources/eh_environment.md.tmpl
+++ b/templates/resources/eh_environment.md.tmpl
@@ -21,7 +21,7 @@ description: |-
 {{ .Description | trimspace }}
 {{- end }}
 
--> This manages a dedicated content management environment available from SitecoreAI Deploy API v2.
+-> This manages a dedicated editing host environment available from SitecoreAI Deploy API v2.
 -> If you are using the older combined environment for both Content Management and Editing host(s), you should use [environment](./environment.md)
 
 {{ if .HasExamples -}}
